<resources>
    <string name="app_name">Lapit App</string>
    <string name="need_a_new_account">NEED A NEW ACCOUNT ?</string>
    <string name="display_name">Display Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="create_account">Create Account</string>
    <string name="log_out">Log Out</string>
    <string name="create_a_new_account">Create A New Account</string>
    <string name="welcome_to_lapit_chat_app">Welcome to Lapit Chat App</string>
    <string name="login_to_your_account">Login to Your Account</string>
    <string name="login">Login</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hi_there_i_m_using_lapit_chat_app">Hi there, I am using Lapit Chat App</string>
    <string name="change_image">Change Image</string>
    <string name="change_status">Change Status</string>
    <string name="save_changes">Save Changes</string>
    <string name="your_status">Your Status</string>
    <string name="user_default_status">User Default Status</string>
    <string name="friends_count">Freinds Count</string>
    <string name="mutual_friends">Mutual Friends</string>
    <string name="send_friend_request">Send Friend Request</string>
    <string name="decline_friend_request">Decline Friend Request</string>
</resources>