<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsActivity"
    android:background="@color/colorPrimary">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/settings_image"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="51dp"
        android:src="@drawable/avatar"/>

    <TextView
        android:id="@+id/settings_display_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/display_name"
        android:textColor="@color/white"
        android:textSize="35sp" />

    <TextView
        android:id="@+id/settings_about"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="301dp"
        android:text="@string/hi_there_i_m_using_lapit_chat_app"
        android:textColor="@color/white"
        android:textSize="20sp"/>

    <Button
        android:id="@+id/settings_image_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="178dp"
        android:backgroundTint="@color/white"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:text="@string/change_image"
        android:textColor="@color/colorPrimary"
        android:textSize="15sp" />

    <Button
        android:id="@+id/settings_status_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="119dp"
        android:backgroundTint="@color/colorAccent"
        android:padding="10dp"
        android:text="@string/change_status"
        android:textColor="@color/white"
        android:textSize="15sp" />
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />

</RelativeLayout>